Primera actualización incluyendo js

--- a/index.html
+++ b/index.html
@@ -5,22 +5,43 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JUJUMEL</title>
+
+    <!-----Archivos css------>
+    <link rel="stylesheet" href="./css/header.css">
+    <link rel="stylesheet" href="./css/configuraciones.css">
+    <link rel="stylesheet" href="./css/galeria.css">
+    <link rel="stylesheet" href="./css/footer.css">
+    
+
+    <!------Tipografías --------->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Braah+One&display=swap" rel="stylesheet">
+
+
 </head>
 <body>
-    <header>
-        <div class="encabezado">
 
-        </div>
+    <!---Encabezado y listado -->
+    <header> </header>
 
-        <ul class="menu">
-            <!---Opciones de menú -->
-            <li>ARETES</li>
-            <li>BRAZALETES TEJIDOS</li>
-            <li>PORTA MARCARILLAS</li>
-            <li>PORTA ANTEOJOS</li>
-            <li>COLLARES</li>
-            <li></li>
-        </ul>
-    </header>
+    <h1 class="our">NUESTROS PRODUCTOS!</h1>
+
+    <!----Galería de productos-------->
+    <div class="galeria1"> </div>
+   
+    <footer> </footer>
+
+
+<script src="./js/footer.js"></script>
+<script src="./js/nuestros_productos.js"></script>
+<script src="./js/main.js"></script>    
+<script src="./js/encabezado.js"></script>
+
 </body>
+
 </html>
