Avance 15 de junio

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./css/header.css">
     <link rel="stylesheet" href="./css/configuraciones.css">
     <link rel="stylesheet" href="./css/galeria.css">
+    <link rel="stylesheet" href="./css/categorias.css">
     <link rel="stylesheet" href="./css/footer.css">
     
 
@@ -18,10 +19,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
 
+    <!--<link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Braah+One&display=swap" rel="stylesheet">-->
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Braah+One&display=swap" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&display=swap" rel="stylesheet">
 
 </head>
 <body>
@@ -33,12 +37,47 @@
 
     <!----Galería de productos-------->
     <div class="galeria1"> </div>
+
+    <!-----Categorias de productos------>
+    <div class="galeria2">
+        <h1>¡BUSCA LA OCASIÓN IDEAL!</h1>
+
+        <div class="categorias">
+
+
+            <div class="C" id="uno">
+                <img src="./img/x.png" alt="">
+                <div class="titulo">Parejas</div>           
+                <a href="#">ver</a>
+            </div>
+
+            <div class="C" id="dos">
+                <img src="./img/x.png" alt="">
+                <div class="titulo">Bautizo</div>           
+                <a href="#">ver</a>
+            </div>
+
+            <div class="C" id="tres">
+                <img src="./img/x.png" alt="">
+                <div class="titulo">Amistad</div>           
+                <a href="#">ver</a>
+            </div>
+
+            <div class="C" id="dos">
+                <img src="./img/x.png" alt="">
+                <div class="titulo">Graduación</div>           
+                <a href="#">ver</a>
+            </div>
+
+        </div>
+    </div>
    
     <footer> </footer>
 
 
 <script src="./js/footer.js"></script>
 <script src="./js/nuestros_productos.js"></script>
+<script src="./js/categorias.js"></script>
 <script src="./js/main.js"></script>    
 <script src="./js/encabezado.js"></script>
 
