--- a/categoria4.html
+++ b/categoria4.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aretes</title>
+    <title>Porta anteojos</title>
 
-    
     <!-----Archivos css------>
     <link rel="stylesheet" href="/css/configuraciones.css">
     <link rel="stylesheet" href="/css/header.css">
@@ -22,21 +21,20 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Braah+One&display=swap" rel="stylesheet">
 
-
 </head>
 <body>
 
-     <!---Encabezado y listado -->
-    <header> </header>
+    <!---Encabezado y listado-->
+    <header></header>
 
-    <section class="Aretes"></section>
+    <section class="PortaAnteojos"></section>
 
-    <footer> </footer>
+    <footer></footer>
 
-
-    <script src="/js/footer.js"></script>
-    <script src="/js/main.js"></script>    
-    <script src="/js/encabezado.js"></script>
-    <script src="./categorias/categoria1.js" type="module"></script>
+    <script src="./js/footer.js"></script>
+    <script src="./js/main.js"></script>
+    <script src="./js/encabezado.js"></script>
+    <script src="./categorias/categoria4.js" type="module"></script>
+    
 </body>
 </html>
