--- a/categoria5.html
+++ b/categoria5.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aretes</title>
+    <title>Brazaletes Bizuteria</title>
 
     
     <!-----Archivos css------>
@@ -29,14 +29,14 @@
      <!---Encabezado y listado -->
     <header> </header>
 
-    <section class="Aretes"></section>
+    <section class="Collares"></section>
 
     <footer> </footer>
-
 
     <script src="/js/footer.js"></script>
     <script src="/js/main.js"></script>    
     <script src="/js/encabezado.js"></script>
-    <script src="./categorias/categoria1.js" type="module"></script>
+    <script src="./categorias/categoria5.js" type="module"></script>
+    
 </body>
 </html>
