--- a/categoria1.html
+++ b/categoria1.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="/css/configuraciones.css">
     <link rel="stylesheet" href="/css/header.css">
     <link rel="stylesheet" href="./categorias/categorias.css">
+    <link rel="stylesheet" href="./css/detalles.css">
     <link rel="stylesheet" href="/css/footer.css">
     
 
@@ -38,5 +39,7 @@
     <script src="/js/main.js"></script>    
     <script src="/js/encabezado.js"></script>
     <script src="./categorias/categoria1.js" type="module"></script>
+
+    <div class="producto-seleccionado"></div>
 </body>
 </html>
