--- a/categoria2.html
+++ b/categoria2.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="/css/configuraciones.css">
     <link rel="stylesheet" href="/css/header.css">
     <link rel="stylesheet" href="./categorias/categorias.css">
+    <link rel="stylesheet" href="./css/detalles.css">
     <link rel="stylesheet" href="/css/footer.css">
     
 
