--- a/categoria4.html
+++ b/categoria4.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/css/configuraciones.css">
     <link rel="stylesheet" href="/css/header.css">
     <link rel="stylesheet" href="./categorias/categorias.css">
+    <link rel="stylesheet" href="./css/detalles.css">
     <link rel="stylesheet" href="/css/footer.css">
     
 
