--- a/categoria1.html
+++ b/categoria1.html
@@ -32,6 +32,10 @@
 
     <section class="Aretes"></section>
 
+    <div id="bolsas-img">
+        <!-- Contenido del ícono de bolsas y la burbuja para el acumulado -->
+      </div>
+
     <footer> </footer>
 
 
