--- a/Mision.html
+++ b/Mision.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="/css/configuraciones.css">
     <link rel="stylesheet" href="/css/header.css">
     <link rel="stylesheet" href="./categorias/categorias.css">
+    <link rel="stylesheet" href="./css/Mision-Vision.css">
     <link rel="stylesheet" href="./css/detalles.css">
     <link rel="stylesheet" href="/css/footer.css">
     
@@ -30,7 +31,18 @@
      <!---Encabezado y listado -->
     <header> </header>
 
-    <section class="Tejidos"></section>
+    <section class="Mision">
+        <p>En JujuMel, nos comprometemos a ofrecer joyas artesanales
+        de la más alta calidad, creadas con pasión y originalidad. 
+        Nuestra misión es realzar la belleza y la personalidad de cada 
+        individuo, a través de piezas únicas que transmitan emociones 
+        y cuenten historias especiales.</p>
+    </section>
+    <section class="Mision2">
+        <p>Queremos ser parte de momentos 
+        significativos en la vida de las personas, brindando joyas que 
+        perduren en el tiempo y sean símbolo de amor, alegría y autenticidad.</p>
+    </section>
 
     <footer> </footer>
 
