--- a/Mision.html
+++ b/Mision.html
@@ -30,20 +30,22 @@
 
      <!---Encabezado y listado -->
     <header> </header>
-
-    <section class="Mision">
-        <p>En JujuMel, nos comprometemos a ofrecer joyas artesanales
-        de la más alta calidad, creadas con pasión y originalidad. 
-        Nuestra misión es realzar la belleza y la personalidad de cada 
-        individuo, a través de piezas únicas que transmitan emociones 
-        y cuenten historias especiales.</p>
+    
+    <h1 class="MiVi">MISIÓN</h1>
+    <section class="ContenedorM">
+        <section class="MiVis">
+            <p>En JujuMel, nos comprometemos a ofrecer joyas artesanales
+            de la más alta calidad, creadas con pasión y originalidad. 
+            Nuestra misión es realzar la belleza y la personalidad de cada 
+            individuo, a través de piezas únicas que transmitan emociones 
+            y cuenten historias especiales.</p>
+        </section>
+        <section class="MiVis2">
+            <p>Queremos ser parte de momentos 
+            significativos en la vida de las personas, brindando joyas que 
+            perduren en el tiempo y sean símbolo de amor, alegría y autenticidad.</p>
+        </section>
     </section>
-    <section class="Mision2">
-        <p>Queremos ser parte de momentos 
-        significativos en la vida de las personas, brindando joyas que 
-        perduren en el tiempo y sean símbolo de amor, alegría y autenticidad.</p>
-    </section>
-
     <footer> </footer>
 
     <script src="/js/footer.js"></script>
