--- a/Vision.html
+++ b/Vision.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="/css/header.css">
     <link rel="stylesheet" href="./categorias/categorias.css">
     <link rel="stylesheet" href="./css/detalles.css">
+    <link rel="stylesheet" href="./css/Mision-Vision.css">
     <link rel="stylesheet" href="/css/footer.css">
     
 
@@ -30,7 +31,23 @@
      <!---Encabezado y listado -->
     <header> </header>
 
-    <section class="Bizuteria"></section>
+    <h1 class="MiVi">VISIÓN</h1>
+    <section class="ContenedorM">
+        <div class="MiVis">
+            <p>Nuestra visión es convertirnos en una joyería artesanal 
+            reconocida a nivel local e internacional, destacada por su artesanía, 
+            diseños innovadores y compromiso con la sostenibilidad. Aspiramos 
+            a ser referentes en el mundo de la joyería, inspirando a otros a 
+            descubrir su creatividad y potencial artístico.</p>
+        </div>
+        <div class="MiVis2">
+            <p>En JujuMel, cada joya cuenta una historia y es más que una 
+            simple pieza, es un vínculo emocional entre nosotros y quienes 
+            eligen llevar nuestra creación con orgullo. Agradecemos a cada 
+            persona que confía en nuestra marca y nos acompaña en este 
+            emocionante viaje de brillo y autenticidad.</p>
+        </div>
+    </section>
 
     <footer> </footer>
 
